fixed toast spacing

--- a/bin/materialize.css
+++ b/bin/materialize.css
@@ -5595,7 +5595,7 @@ small {
   display: block;
   position: fixed;
 }
-@media only screen and (min-width: 0) and (max-width: 992px) {
+@media only screen and (max-width: 600px) {
   #toast-container {
     min-width: 100%;
     bottom: 0%;
@@ -5611,32 +5611,51 @@ small {
 @media only screen and (min-width: 992px) {
   #toast-container {
     min-width: 8%;
-    top: 10%;
+    top: 12%;
     right: 7%;
   }
 }
 
 .toast {
-  margin: 10px auto;
+  width: auto;
+  clear: both;
+  margin: 5px auto;
   position: relative;
-  width: 100%;
+  max-width: 100%;
   height: 40px;
+  line-height: 40px;
   background-color: #323232;
-  padding: 10px 15px;
+  padding: 0px 22px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   border-radius: 2px;
-  display: table;
+  display: block;
   top: 0px;
+}
+.toast.rounded {
+  border-radius: 24px;
+}
+@media only screen and (max-width: 600px) {
+  .toast {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 600px) and (max-width: 992px) {
+  .toast {
+    float: left;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .toast {
+    float: right;
+  }
 }
 .toast span {
   padding: 0px;
   font-size: 1.1rem;
   font-weight: 300;
-  display: table-cell;
   color: #FFF;
-  vertical-align: middle;
   text-align: center;
 }
 
