--- a/sass/components/_toast.scss
+++ b/sass/components/_toast.scss
@@ -1,18 +1,18 @@
 #toast-container {
   display:block;
   position: fixed;
-  @media only screen and (min-width: 0) and (max-width: $medium-screen) {
+  @media #{$small-and-down} {
     min-width: 100%;
     bottom: 0%;    
   }
-  @media only screen and (min-width: $small-screen) and(max-width: $medium-screen) {
+  @media #{$medium-only} {
     min-width: 30%;
     left: 5%;
     bottom: 7%;
   }
-  @media only screen and (min-width: $medium-screen) {
+  @media #{$large-and-up} {
     min-width: 8%;
-    top: 10%;
+    top: 12%;
     right: 7%;
   }
 }
@@ -25,14 +25,15 @@
   position: relative;
   max-width:100%;
   height: 40px;
+  line-height: 40px;
   background-color: #323232;
-  padding: 10px 15px;
+  padding: 0px 22px;
   @include border-box();
   border-radius: 2px;
   display: block;
   top: 0px;
   &.rounded{
-    border-radius:24px;;
+    border-radius:24px;
   }
   @media #{$small-and-down} {
     width:100%;
@@ -48,9 +49,7 @@
     padding: 0px;
     font-size: 1.1rem;
     font-weight: 300;
-    display: table-cell;
     color: #FFF;
-    vertical-align: middle;
     text-align: center;
   }
 }
